style: readability fixes

--- a/app/styles.css
+++ b/app/styles.css
@@ -58,7 +58,7 @@
     }
 
     h2 {
-        @apply text-2xl;
+        @apply text-3xl dark:text-amber-300 font-semibold;
     }
 
     img {
@@ -66,7 +66,7 @@
     }
 
     main {
-        @apply text-lg;
+        @apply text-lg tracking-wide;
     }
 
     main ul,
@@ -76,7 +76,7 @@
     }
 
     main h1 {
-        @apply py-12 text-center;
+        @apply py-12 text-center font-semibold;
     }
 
     /** Set margin bottom but not for headers in sections (e.g. Experience page) */
